# backtracking

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: n_queens.rs  sudoku.rs
examples/knights_journey/: journey.rs  main.rs
src/: backtracking.rs  journey.rs  knights_journey.rs  lib.rs  main.rs  position.rs  sudoku.rs
src/knights_journey/: board.rs  journey.rs  position.rs
