[package]
name = "backtracking"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pacman82/backtracking"
documentation = "https://docs.rs/backtracking/"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Iterate over Solutions using backtracking"


# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["backtracking"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
